--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -13,6 +13,7 @@
 
             <button name="update_credentials" position="attributes">
                 <attribute name="string">Update Password</attribute>
+                <attribute name="confirm">Esta funcionalidad es solo para cambiar contraseña. Si necesita cambiar algun otro dato de login/usuario debe eliminar esta credencial y crear una nueva. Para ello vaya al menu Mi base / Administrar Credenciales</attribute>
             </button>
 
             <field name="next_refresh" position="after">
