--- a/helpdesk_timesheet_ux/views/helpdesk_ticket_views.xml
+++ b/helpdesk_timesheet_ux/views/helpdesk_ticket_views.xml
@@ -8,6 +8,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='project_id']" position="attributes">
                 <attribute name="domain">[('allow_tickets', '=', True)]</attribute>
+                <attribute name="invisible">False</attribute>
             </xpath>
         </field>
     </record>
