--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -47,4 +47,13 @@
         </field>
     </record>
 
+    <record id="account_online_sync.menu_action_online_provider_account" model="ir.ui.menu">
+        <field name="name">Sincronización en Linea (Syncfy - Argentina)</field>
+        <field name="groups_id" eval="[(6, 0, [])]"/>
+    </record>
+
+    <record id="account_online_synchronization.menu_action_online_link_account" model="ir.ui.menu">
+        <field name="name">Sincronización en Linea (Saltedge)</field>
+    </record>
+
 </odoo>
