--- a/account_direct_debit/views/account_batch_payment_view.xml
+++ b/account_direct_debit/views/account_batch_payment_view.xml
@@ -4,10 +4,13 @@
     <record id="view_batch_payment_form_inherit" model="ir.ui.view">
         <field name="name">account.batch.payment.form.inherit</field>
         <field name="model">account.batch.payment</field>
-        <field name="inherit_id" ref="account_direct_debit.view_batch_payment_form_inherit"/>
+        <field name="inherit_id" ref="account_batch_payment.view_batch_payment_form"/>
         <field name="arch" type="xml">
+            <form>
+                <field name="direct_debit_format" invisible="1"/>
+            </form>
             <field name="name" position="after">
-                <field name="periodo" attrs="{'invisible': [('direct_debit_format', '=', False)]}"/>
+                <field name="direct_debit_collection_date" attrs="{'invisible': [('direct_debit_format', '=', False)]}"/>
             </field>
         </field>
     </record>
