--- a/account_multicurrency_ux/wizards/res_config_settings_views.xml
+++ b/account_multicurrency_ux/wizards/res_config_settings_views.xml
@@ -6,7 +6,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="account.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[@data-key='account']//field[@name='group_multi_currency']/../.." position="after">
+            <xpath expr="//div[@data-key='account']//field[@name='group_multi_currency']/../../../.." position="after">
                 <div class="col-xs-12 col-md-6 o_setting_box" attrs="{'invisible': [('group_multi_currency', '=', False)]}">
                     <div class="o_setting_left_pane"/>
                     <div class="o_setting_right_pane">
