--- a/l10n_ar_account_direct_debit/views/account_batch_payment_view.xml
+++ b/l10n_ar_account_direct_debit/views/account_batch_payment_view.xml
@@ -12,4 +12,15 @@
         </field>
     </record>
 
+
+    <record model="ir.actions.server" id="action_download_files_wizard">
+        <field name="name">Descargar txt</field>
+        <field name="model_id" ref="model_account_batch_payment"/>
+        <field name="state">code</field>
+        <field name="code">
+action = records.generate_debit_txt()
+        </field>
+        <field name="binding_model_id" ref="model_account_batch_payment"/>
+    </record>
+
 </odoo>
