[FIX] account_online_sync_ar: do not let to create bank without sync.
This is available in Odoo original account synchronization module,
the user can select to create the bank manually without making the
syncronization. In this case we add this functionality we were
wrongly removing with our wizard.

closes ingadhoc/enterprise-extensions#204

X-original-commit: b2e36bc61d4a754a229fc3acbdf8d01275a3e91a
Signed-off-by: Katherine Zaoral <kz@adhoc.com.ar>

--- a/account_online_sync_ar/wizards/provider_link_view.xml
+++ b/account_online_sync_ar/wizards/provider_link_view.xml
@@ -17,7 +17,7 @@
                 <footer>
                     <button name="action_open_saltedge" string="Saltedge" type="object" class="oe_highlight"/>
                     <button name="action_open_paybook" string="Syncfy" type="object" class="oe_highlight"/>
-                    or
+                    <button name="action_open_manual" string="Crear banco (sin sincronización)" type="object" class="oe_link"/>
                     <button string="Cancel" class="oe_link" special="cancel"/>
                 </footer>
             </form>
