[IMP] usability, code, etc
X-original-commit: 0057678e1c68b5eba0744916547d3eab423d829e
Part-of: ingadhoc/enterprise-extensions#192

--- a/account_direct_debit/views/account_direct_debit_mandate_views.xml
+++ b/account_direct_debit/views/account_direct_debit_mandate_views.xml
@@ -45,6 +45,7 @@
             <tree decoration-info="state == 'draft'" decoration-muted="state == 'closed'">
                 <field name="partner_id"/>
                 <field name="description"/>
+                <field name="journal_id"/>
                 <field name="state"/>
                 <field name="company_id" groups="base.group_multi_company"/>
             </tree>
