--- a/account_direct_debit/views/account_batch_payment_view.xml
+++ b/account_direct_debit/views/account_batch_payment_view.xml
@@ -12,6 +12,13 @@
             <field name="name" position="after">
                 <field name="direct_debit_collection_date" attrs="{'invisible': [('direct_debit_format', '=', False)]}"/>
             </field>
+            <xpath expr="//field[@name='payment_ids']/tree" position="attributes">
+                <attribute name="decoration-muted">state in ['draft', 'cancelled']</attribute>
+            </xpath>
+            <!-- si el batch esta posteado (payment sent) permitimos cancelar rapidamente pagos que no se acreditan -->
+            <xpath expr="//field[@name='payment_ids']/tree" position="inside">
+                <button name="cancel_and_remove_from_batch" attrs="{'invisible': ['|', ('parent.state', '!=', 'sent'), ('state', 'not in', ['sent', 'posted'])]}" string="Cancel" confirm="The payment will be cancelled and removed from this batch, are you sure you want to continue?" type="object"/>
+            </xpath>
         </field>
     </record>
 
