[IMP] account_direct_debit: filters on invoices
X-original-commit: 757069b20cab1c37c25dad7a2db5fc6b9396ce0a
Part-of: ingadhoc/enterprise-extensions#192

--- a/account_direct_debit/views/account_move_view.xml
+++ b/account_direct_debit/views/account_move_view.xml
@@ -12,4 +12,18 @@
         </field>
     </record>
 
+    <record id="view_account_invoice_filter" model="ir.ui.view">
+        <field name="name">account.move.select</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_account_invoice_filter"/>
+        <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="direct_debit_mandate_id"/>
+            </field>
+            <group>
+                <filter string="Direct Debit Mandate" name="groupby_direct_debit_mandate_id" domain="[]" context="{'group_by': 'direct_debit_mandate_id'}"/>
+            </group>
+        </field>
+    </record>
+
 </odoo>
