--- a/l10n_ar_account_direct_debit/views/account_direct_debit_mandate_views.xml
+++ b/l10n_ar_account_direct_debit/views/account_direct_debit_mandate_views.xml
@@ -7,7 +7,8 @@
         <field name="arch" type="xml">
             <field name="description" position="after">
                 <field name="credit_card_number" attrs="{'invisible': [('direct_debit_format', 'not in', ['visa_credito', 'master_credito', 'visa_debito'])]}"/>
-                <field name="partner_bank_id" attrs="{'invisible': [('direct_debit_format', 'not in', ['cbu_macro', 'cbu_galicia'])]}" domain="[('partner_id', '=', partner_id)]" context="{'default_partner_id':partner_id, 'account.direct_debit.mandate': True}"/>
+                <field name="commercial_partner_id" invisible="1"/>
+                <field name="partner_bank_id" attrs="{'invisible': [('direct_debit_format', 'not in', ['cbu_macro', 'cbu_galicia'])]}" domain="[('partner_id.commercial_partner_id', '=', commercial_partner_id)]" context="{'default_partner_id':partner_id, 'account.direct_debit.mandate': True}"/>
             </field>
         </field>
     </record>
