[MIG] sale_stock_ux: Migration to 15.0

--- a/sale_stock_ux/views/sale_order_line_views.xml
+++ b/sale_stock_ux/views/sale_order_line_views.xml
@@ -22,6 +22,9 @@
             <field name="product_uom_qty" position="after">
                 <field name="qty_delivered"/>
             </field>
+            <field name="qty_invoiced" position="after">
+                <field name="qty_to_deliver" optional="hide"/>
+            </field>
         </field>
     </record>
 
