--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -1,47 +1,42 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
 
-    <record id="online_provider_account_form_view" model="ir.ui.view">
-        <field name="name">maccount.online.provider.form.view</field>
-        <field name="model">account.online.provider</field>
-        <field name="inherit_id" ref="account_online_sync.online_provider_account_form_view"/>
+    <!-- TODO KZ review if this is needed
+    <button groups="account.group_account_manager" name="action_new_synchronization" string="Connect" class="btn-primary" type="object" attrs="{'invisible': ['|', ('state', '!=', 'disconnected'), ('provider_data', '!=', False)]}"/> -->
+
+    <record id="account_online_link_view_form" model="ir.ui.view">
+        <field name="name">account.online.link.form.view</field>
+        <field name="model">account.online.link</field>
+        <field name="inherit_id" ref="account_online_synchronization.account_online_link_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='status']" position="after">
+            <xpath expr="//field[@name='last_refresh']" position="after">
+                <field name="provider_type"/>
                 <field name="action_required" attrs="{'invisible': [('provider_type', '!=', 'paybook')]}"/>
-                <field name="auto_sync" attrs="{'invisible': [('provider_type', '!=', 'paybook')]}"/>
+                <field name="status_code" attrs="{'invisible': [('provider_type', '!=', 'paybook')]}"/>
+                <field name="message" attrs="{'invisible': [('provider_type', '!=', 'paybook')]}"/>
             </xpath>
 
-            <button name="update_credentials" position="attributes">
-                <attribute name="string">Update Password</attribute>
+            <button name="action_update_credentials" position="attributes">
+                <attribute name="string">Actualizar Contraseña</attribute>
                 <attribute name="confirm">Esta funcionalidad es solo para cambiar contraseña. Si necesita cambiar algun otro dato de login/usuario debe eliminar esta credencial y crear una nueva. Para ello vaya al menu Mi base / Administrar Credenciales</attribute>
             </button>
 
             <field name="next_refresh" position="after">
                 <field name="paybook_max_date"/>
             </field>
-            <notebook position="before">
+            <field name="account_online_account_ids"  position="before">
                 <div attrs="{'invisible': [('provider_type', '!=', 'paybook')]}" groups="base.group_no_one">
                     <button name="action_paybook_update_state" string="Check Status" icon="fa-plus" type="object" class="oe_link"/>
-                    <button name="action_paybook_update_accounts" string="Add/Configure accounts" icon="fa-plus" type="object" class="oe_link"/>
                     <button name="action_paybook_force_sync" string="Force Sync" icon="fa-refresh" type="object" class="oe_link"/>
                     <button name="action_paybook_update_transactions" string="Update/Fix" icon="fa-wrench" type="object" class="oe_link" help="Update refreshed transactions, delete and disabled ones"/>
                     (Last <field name="paybook_refresh_days"/> days)
                     <button name="online_account_delete_credentials" string="Delete Online Credentials" confirm="Esta acción no se puede deshacer. Estas seguro que quieres aplicarla? Esto afectara a cualquier otra base de datos usando la misma credencial" icon="fa-trash" type="object" class="oe_link"/>
                 </div>
-            </notebook>
+            </field>
             <field name="name" position="after">
                 <field name="paybook_username_hint"/>
             </field>
         </field>
-    </record>
-
-    <record id="account_online_sync.menu_action_online_provider_account" model="ir.ui.menu">
-        <field name="name">Sincronización en Linea (Syncfy - Argentina)</field>
-        <field name="groups_id" eval="[(6, 0, [])]"/>
-    </record>
-
-    <record id="account_online_synchronization.menu_action_online_link_account" model="ir.ui.menu">
-        <field name="name">Sincronización en Linea (Saltedge)</field>
     </record>
 
 </odoo>
