--- a/helpdesk_timesheet_ux/views/helpdesk_team_views.xml
+++ b/helpdesk_timesheet_ux/views/helpdesk_team_views.xml
@@ -6,6 +6,9 @@
         <field name="model">helpdesk.team</field>
         <field name="inherit_id" ref="helpdesk.helpdesk_team_view_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='member_ids']//.." position="attributes">
+              <attribute name="attrs">{'invisible': [('assign_method', 'not in', ['randomly','balanced'])]}</attribute>
+            </xpath>
             <div id="productivity">
                 <div class="col-md-6 o_setting_box" attrs="{'invisible': [('assign_method','!=', 'specific_user')]}">
                     <div class="o_setting_right_pane">
