--- a/account_direct_debit/views/account_direct_debit_mandate_views.xml
+++ b/account_direct_debit/views/account_direct_debit_mandate_views.xml
@@ -21,7 +21,7 @@
                     <group>
                         <group>
                             <field name="partner_id"/>
-                            <field name="journal_id" domain="[('type', '=', 'bank'), ('company_id', '=', company_id), ('inbound_payment_method_ids.code', '=', 'dd')]" required="1"/>
+                            <field name="journal_id" domain="[('type', '=', 'bank'), ('company_id', '=', company_id), ('inbound_payment_method_line_ids.payment_method_id.code', '=', 'dd')]" required="1"/>
                         </group>
                         <group>
                             <field name="description"/>
