--- a/account_direct_debit/views/account_move_view.xml
+++ b/account_direct_debit/views/account_move_view.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <group id="header_left_group">
-                <field name="direct_debit_mandate_id" attrs="{'invisible': [('type', '!=', 'out_invoice')]}" options="{'no_create': True}" domain="[('partner_id.commercial_partner_id', '=', commercial_partner_id), ('company_id', '=', company_id), ('state', '=', 'active')]" groups="account.group_account_invoice"/>
+                <field name="direct_debit_mandate_id" attrs="{'invisible': [('move_type', '!=', 'out_invoice')]}" options="{'no_create': True}" domain="[('partner_id.commercial_partner_id', '=', commercial_partner_id), ('company_id', '=', company_id), ('state', '=', 'active')]" groups="account.group_account_invoice"/>
             </group>
         </field>
     </record>
