--- a/account_direct_debit/views/account_payment_views.xml
+++ b/account_direct_debit/views/account_payment_views.xml
@@ -5,7 +5,7 @@
             <field name="model">account.payment</field>
             <field name="inherit_id" ref="account.view_account_payment_form"/>
             <field name="arch" type="xml">
-                <field name="payment_method_id" position="after">
+                <field name="payment_method_line_id" position="after">
                     <field name="payment_method_code" invisible="1"/>
                     <field name="commercial_partner_id" invisible="1"/>
                     <field name="direct_debit_format" invisible="1"/>
