[FIX] account_online_sync_ar: Display widget Paybook
The specification of the widget change so we need to change it to
avoid errors loading the widget.

closes ingadhoc/enterprise-extensions#213

X-original-commit: 8e87fd9b2012bad8be44811f6da6e6ab0b76847f
Signed-off-by: Pablo  Montenegro <pam@adhoc.com.ar>
Signed-off-by: Katherine Zaoral <kz@adhoc.com.ar>

--- a/account_online_sync_ar/views/templates.xml
+++ b/account_online_sync_ar/views/templates.xml
@@ -30,7 +30,8 @@
                         },
                         "navigation": {
                             "displaySiteOrganizationTypes": ['Bank', 'Digital Wallet'],
-                            "hideSelectCountry": ['Argentina'],                        },
+                            "hideSelectCountry": true,
+                        },
                     }
                 };
                 syncWidget = new SyncWidget(params);
