--- a/account_balance_import/wizards/account_balance_import_wizard.xml
+++ b/account_balance_import/wizards/account_balance_import_wizard.xml
@@ -30,10 +30,10 @@
                     <group attrs="{'invisible': [('mode', 'not in', 'check_balance')] }">
                         <h3 colspan="4">Importación de Cheques</h3>
                         <field name="check_type" attrs="{'required': [('mode', '=', 'check_balance')] }" />
-                        <field name="check_journal_bank_id" attrs="{'required': [('mode', '=', 'check_balance'), ('check_type', '=', 'issue_check')], 'invisible': [('check_type', 'not in', 'issue_check')] }" />
-                        <field name="check_checkbook_id" attrs="{'required': [('mode', '=', 'check_balance'), ('check_type', '=', 'issue_check')], 'invisible': [('check_type', 'not in', 'issue_check')]}" domain="[('journal_id', '=', check_journal_bank_id)]"/>
+                        <field name="check_journal_bank_id" attrs="{'required': [('mode', '=', 'check_balance'), ('check_type', '=', 'issue_check')], 'invisible': [('check_type', 'not in', 'issue_check')] }" options="{'no_create':True}" />
+                        <field name="check_checkbook_id" attrs="{'required': [('mode', '=', 'check_balance'), ('check_type', '=', 'issue_check')], 'invisible': [('check_type', 'not in', 'issue_check')]}" domain="[('journal_id', '=', check_journal_bank_id)]" options="{'no_create':True}"/>
                         <field name="check_journal_third_id" attrs="{'required': [('mode', '=', 'check_balance'), ('check_type', '=', 'third_check')],
-                        'invisible': [('check_type', 'not in', 'third_check')] }" />
+                        'invisible': [('check_type', 'not in', 'third_check')] }" options="{'no_create':True}"/>
                         <br/>
                         <a class="btn btn-link" colspan="4" attrs="{'required': [('mode', '=', 'partner_balance')], 'invisible':[ ('check_type', '!=', 'issue_check')]}" href="/account_balance_import/static/xls/own_check_balance.xls" role="button">
                             <span class="fa fa-download" title="download"></span>
