--- a/helpdesk_solutions_project/views/project_stage_views.xml
+++ b/helpdesk_solutions_project/views/project_stage_views.xml
@@ -5,7 +5,7 @@
         <field name="model">project.task.type</field>
         <field name="inherit_id" ref="project.task_type_edit"/>
         <field name="arch" type="xml">
-            <field name="is_closed" position="after">
+            <field name="fold" position="after">
                 <field name="solution_required"/>
             </field>
         </field>
