--- a/helpdesk_solutions_project/views/project_task_views.xml
+++ b/helpdesk_solutions_project/views/project_task_views.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <record id="project_task_view_search" model="ir.ui.view">
+        <field name="name">project.task.search</field>
+        <field name="model">project.task</field>
+        <field name="inherit_id" ref="project.view_task_search_form"/>
+        <field name="arch" type="xml">
+            <field name="rating_last_text" position="after">
+                <field name="helpdesk_solution_id"/>
+            </field>
+        </field>
+    </record>
+
     <record id="project_task_view_form" model="ir.ui.view">
         <field name="name">project.task.form</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_form2"/>
         <field name="priority">20</field>
         <field name="arch" type="xml">
-            <field name="parent_id" position="after">
+            <field name="user_ids" position="after">
                 <label for="helpdesk_solution_id"/>
                 <div class="o_row">
+                    <field name="task_description" invisible="1"/>
                     <field name="helpdesk_solution_id" context="{'default_name':name,'default_solution_description': solution_description,'default_ticket_description':task_description}"/>
-                    <button name="copy_solution" type="object" class="oe_link oe_read_only" attrs="{'invisible': [('helpdesk_solution_id', '=', False)]}" help="Overwrite the actual solution with the costumer solution of the linked solution" icon="fa-copy"/>
+                    <button name="copy_solution" type="object" class="oe_link" attrs="{'invisible': [('helpdesk_solution_id', '=', False)]}" title="Overwrite the actual solution with the costumer solution of the linked solution" icon="fa-copy"/>
                 </div>
             </field>
             <page name="description_page" position="after">
@@ -22,6 +34,23 @@
                     <field name="solution_description" placeholder="Add solution description..."/>
                 </page>
             </page>
+        </field>
+    </record>
+
+    <record id="project_task_action_main_tree" model="ir.actions.act_window">
+        <field name="name">Tasks</field>
+        <field name="res_model">project.task</field>
+        <field name="view_mode">tree,kanban,form</field>
+        <field name="search_view_id" ref="project.view_task_search_form"/>
+        <field name="domain">[('display_project_id', '!=', False)]</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+            No tasks found. Let's create one!
+            </p>
+            <p>
+            Keep track of the progress of your tasks from creation to completion.<br/>
+            Collaborate efficiently by chatting in real-time or via email.
+            </p>
         </field>
     </record>
 
