--- a/helpdesk_timesheet_ux/views/helpdesk_team_views.xml
+++ b/helpdesk_timesheet_ux/views/helpdesk_team_views.xml
@@ -9,7 +9,7 @@
             <xpath expr="//field[@name='member_ids']//.." position="attributes">
               <attribute name="attrs">{'invisible': [('assign_method', 'not in', ['randomly','balanced'])], 'required': [('assign_method', 'in', ['randomly','balanced'])]}</attribute>
             </xpath>
-            <div id="productivity">
+            <xpath expr="//div[@id='productivity']/div[2]/div/div[2]" position="inside">
                 <div class="col-md-6 o_setting_box" attrs="{'invisible': [('assign_method','!=', 'specific_user')]}">
                     <div class="o_setting_right_pane">
                         <label for="user_id"/>
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </xpath>
         </field>
     </record>
 
