--- a/sale_subscription_ux/views/sale_subscription_template_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_template_views.xml
@@ -2,15 +2,15 @@
 <odoo>
 
     <record id="sale_subscription_template_view_form" model="ir.ui.view">
-        <field name="name">sale.subscription.template.form</field>
-        <field name="model">sale.subscription.template</field>
+        <field name="name">sale.order.template.form</field>
+        <field name="model">sale.order.template</field>
         <field name="inherit_id" ref="sale_subscription.sale_subscription_template_view_form"/>
         <field name="arch" type="xml">
-            <field name="payment_mode" position="before">
-                <field name="dates_required"/>
-                <field name="add_period_dates_to_description"/>
-                <field name="do_not_update_price"/>
-                <field name="use_different_invoice_address"/>
+            <field name="journal_id" position="before">
+                <field name="dates_required" attrs="{'invisible': [('is_subscription', '=', False)]}"/>
+            </field>
+            <field name="journal_id" position="after">
+                <field name="add_period_dates_to_description" attrs="{'invisible': [('is_subscription', '=', False)]}"/>
             </field>
         </field>
     </record>
